feat(rei): register stocked mahjong boxes